--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Duvan Espitia\\AppData\\Roaming\\.jmonkeyplatform\\v3.2.1-stable-sdk2\\build.properties
+user.properties.file=C:\\Users\\juand\\AppData\\Roaming\\.jmonkeyplatform\\v3.2.1-stable-sdk2\\build.properties
